added two gifs for both correct and incorrect feedback

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="alert alert-success" role="alert">
-                            <h4 class="alert-heading text-center">Well done!</h4>
+                            <h4 class="alert-heading text-center"><img src="assets/images/correct.gif" width="500" height="400" alt="Correct Answer!" class="text-center"></h4>
                             <p class="text-center">Click on <b>Next</b> button to check what else you know!</p>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="alert alert-danger" role="alert">
-                            <h4 class="alert-heading text-center">WRONG!</h4>
+                            <h4 class="alert-heading text-center"><img src="assets/images/wrong.gif" width="500" height="400" alt="Wrong Answer!" class="text-center"></h4>
                             <p class="text-center">Visit <a href="https://www.ourplanet.com/en/" target="_blank">Our Planet</a> to learn more about Earth! </p>
                         </div>
                     </div>
