--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="quiz-questions" id="quiz-questions">
             <div class="container">
                 <div class="question" id="question">
-                    <button type="button" class="btn btn-danger btn-lg">Quit</button>
+                    <button type="button" class="btn btn-danger btn-lg" id="quit-button">Quit</button>
                     <div class="card bg-light">
                             <img class="card-img-top" id="image"/>
                         <h4 class="card-title text-center mt-3" id="question-info">Question</h4>
@@ -79,28 +79,55 @@
             </div>
             <!--/QUESTION CONTAINER-->
             <!--FEEDBACK-->
+            <!--
             <div class="container" id="correct-feedback">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-sm-12">
                         <div class="alert alert-success" role="alert">
-                            <h4 class="alert-heading text-center"><img src="assets/images/correct.gif" width="500" height="400" alt="Correct Answer!" class="text-center"></h4>
-                            <p class="text-center">Click on <b>Next</b> button to check what else you know!</p>
+                            <h4 class="alert-heading text-center"><img src="assets/images/correct.gif" alt="Correct Answer!" class="text-center"></h4>
+                            <p class="text-center">Visit <a href="https://www.ourplanet.com/en/" target="_blank">Our Planet</a> to learn more about Earth! </p>
                         </div>
                     </div>
                 </div>
                 </div>
                 <div class="container" id="incorrect-feedback">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-sm-12">
                         <div class="alert alert-danger" role="alert">
-                            <h4 class="alert-heading text-center"><img src="assets/images/wrong.gif" width="500" height="400" alt="Wrong Answer!" class="text-center"></h4>
+                            <h4 class="alert-heading text-center"><img src="assets/images/wrong.gif" alt="Wrong Answer!" class="text-center"></h4>
                             <p class="text-center">Visit <a href="https://www.ourplanet.com/en/" target="_blank">Our Planet</a> to learn more about Earth! </p>
                         </div>
                     </div>
                 </div>
+                -->
             </div>
             <!--/FEEDBACK-->
+            <!--QUIT BUTTON-->
+                <div class="container d-none">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <h4>Are you sure?</h4>
+                                <button class="btn btn-primary btn-lg mt-3" id="yes">Yes</button>
+                                <button class="btn btn-primary btn-lg mt-3" id="no">No</button>
+                        </div>
+                    </div>
+                </div>
+            <!--/QUIT BUTTON-->
         </div>
+        <!--SCORE PAGE-->
+            <div class="container d-none" id="score-page">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-center font-weight-bold" id="score"></h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <button class="btn btn-primary btn-lg" id="try-again-btn">Try Again</button>
+                    </div>
+                </div>
+            </div>
+            <!--/SCORE PAGE-->
         <script src="assets/js/jquery-3.5.1.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="assets/js/script.js"></script>
