added feedback at the end of the quiz depending of the score

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                                 </div>
                             </div>
                             <div class="row">
+                            <div class="col-12">
+                            <div class="progress mt-3" id="progress-bar">
+                            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            </div>
+                            </div>
+                            <div class="row">
                                 <div class="col-12 text-center">
                                     <button class="btn btn-primary btn-lg mt-3" id="next-button">Next</button>
                                 </div>
@@ -118,6 +125,11 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center font-weight-bold" id="score"></h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="decoration" id="feedback"></div>
                     </div>
                 </div>
                 <div class="row">
