added funcionality to try again btn so on click the new game starts

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	</head>
 	<body>
 		<header>
-			<h1 class="mt-5 text-center decoration">Planet Earth</h1>
-			<h3 class="mt-5 text-center decoration">
+			<h1 class="mt-4 text-center decoration">Planet Earth</h1>
+			<h3 class="mt-4 text-center decoration" id="intro">
                 Let's see how much do you know about your home!
             </h3>
 		</header>
