fixed two errors in index file to fit html validator standards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<h1 class="mt-4 text-center decoration">Planet Earth</h1>
-			<h3 class="mt-4 text-center decoration" id="intro">
+			<h3 class="mt-4 text-center decoration">
                 Let's see how much do you know about your home!
             </h3>
 		</header>
@@ -46,7 +46,7 @@
 			<div class="container">
 				<div class="question" id="question">
 					<div class="card bg-light">
-						<img class="card-img-top" id="image"/>
+						<img src="/" class="card-img-top" id="image" alt="Quiz Questions Images"/>
 						<h4 class="card-title text-center mt-3" id="question-info">Question</h4>
 						<div class="card-body">
 							<div class="row" id="answer-btns">
