linked index.html to header h1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1 class="mt-4 text-center decoration">Planet Earth</h1>
+			<h1 class="mt-4 text-center decoration"><a href="index.html" class="text-decoration-none">Planet Earth</a></h1>
 			<h3 class="mt-4 text-center decoration">
                 Let's see how much do you know about your home!
             </h3>
