updated readme.md file, added table of contents

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="container d-none" id="score-page">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="text-center font-weight-bold" id="score"></h2>
+					<h2 class="text-center font-weight-bold" id="score">Score</h2>
 				</div>
 			</div>
 			<div class="row">
