--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 text-center">
+                                    <button class="btn btn-danger btn-lg mt-3" id="quit-button">Quit</button>
                                     <button class="btn btn-primary btn-lg mt-3" id="next-button">Next</button>
+                                    <button class="btn btn-danger btn-lg mt-3" id="restart-button">Restart</button>
                                 </div>
                             </div>
                         </div>
