added quit button in score section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <button class="btn btn-primary btn-lg" id="try-again-btn">Try Again</button>
+                    <a href="index.html" class="text-decoration-none"><button class="btn btn-danger btn-lg" id="quit-button">Quit</button></a>
                 </div>
             </div>
         </div>
